llvm-toolchain-3.9 (1:3.9.1-18) unstable; urgency=medium

  * Force the deactivation of ocaml until the transition is done
  * Standards-Version: 4.1.0

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 13 Oct 2017 23:42:29 +0200

llvm-toolchain-3.9 (1:3.9.1-17) unstable; urgency=medium

  * Remove the -Wl option to call gold instead of the normal linker
    (Closes: #876787)

  [ Gianfranco Costamagna ]
  * Fixup previous upload, adding -NDEBUG to build flags,
    lost in the -g -> -g1 switch

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 01 Oct 2017 15:23:30 +0200

llvm-toolchain-3.9 (1:3.9.1-16) unstable; urgency=medium

  * Backport of an arm patch for rust.
    https://bugs.llvm.org/show_bug.cgi?id=32379
    (Closes: #876072)

  [ Matthias Klose ]
  * Link with --no-keep-files-mapped --no-map-whole-files when using gold.
  * Fix sanitizer build failure with glibc-2.26.
  * build using gold on arm64 and s390x. For backports, arm64 might still
    need the BFD linker, and building with only one or two processes in
    parallel.
  * On amd64, s390x, arm64 and ppc64el, build with -g1 instead of -g.
  * Set CMAKE_CXX_FLAGS_RELWITHDEBINFO and pass opt_flags.

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 08 Sep 2017 11:57:07 +0200

llvm-toolchain-3.9 (1:3.9.1-15) unstable; urgency=medium

  * Fail the build if the arch + gcc has a broken gsplit-dwarf support

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 03 Sep 2017 15:12:37 +0200

llvm-toolchain-3.9 (1:3.9.1-13) unstable; urgency=medium

  * Fix the previous declaration, incorrect gcc comparison

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 01 Sep 2017 09:00:10 +0200

llvm-toolchain-3.9 (1:3.9.1-12) unstable; urgency=medium

  * Fix the FTBFS because of -gsplit-dwarf:
    - Only enable it on archs which needs it
    - Only enable it when gcc supports it correctly

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 31 Aug 2017 18:49:20 +0200

llvm-toolchain-3.9 (1:3.9.1-11) unstable; urgency=medium
