@@ -34,9 +34,8 @@ ifneq (,$(filter $(DEB_HOST_ARCH),powerpc powerpcspe))
 LDFLAGS_EXTRA += -latomic
 endif
 
-ENABLE_SPLIT_DWARF_ARCHS := armel armhf i386 mips powerpc
-# Only enable gsplit dwarf on archs which needs it
-ifneq (,$(filter $(DEB_HOST_ARCH),$(ENABLE_SPLIT_DWARF_ARCHS)))
+# Only enable gsplit dwarf on archs which needs it (32 bits)
+ifeq ($(DEB_HOST_ARCH_BITS),32)
 ifeq ($(shell dpkg --compare-versions $(shell dpkg-query -W -f '$${Version}' binutils) ge 2.22.52.0.4 ; echo $$?),0)
 # when using -gsplit-dwarf, it will requires extract-dwo which doesn't exist on precise:
 # More: https://llvm.org/bugs/show_bug.cgi?id=28841
@@ -45,7 +44,7 @@ ifeq ($(shell dpkg --compare-versions $(shell dpkg-query -W -f '$${Version}' g++
 # Only pass -gsplit-dwarf with working version of gcc 7
 # More: https://bugs.llvm.org/show_bug.cgi?id=34140 & https://bugs.debian.org/873609
 CXXFLAGS_EXTRA += -gsplit-dwarf
-else 
+else
 $(error "Broken gcc version for -gsplit-dwarf support. Please use < gcc 7 or >= 7.2.0-2")
 endif # < gcc 7 or >= 7.2.0-2
 endif # binutils
@@ -60,11 +59,6 @@ export CC=gcc-$(GCC_VERSION)
 export CXX=g++-$(GCC_VERSION)
 
 opt_flags = -O2 -DNDEBUG
-ifneq (,$(filter $(DEB_HOST_ARCH),amd64 arm64 ppc64el s390x))
-  opt_flags += -g1
-else
-  opt_flags += -g
-endif
 
 ifneq (,$(findstring $(DEB_HOST_ARCH),armel))
   opt_flags += -marm
