@@ -2,6 +2,11 @@ llvm-toolchain-3.9 (1:3.9.1-18) unstable; urgency=medium
 
   * Force the deactivation of ocaml until the transition is done
   * Standards-Version: 4.1.0
+  * Try to fix the mipsel FTBFS (Closes: #877567)
+    I am trying the first option from the bug:
+    - gsplit-dward on 32 bits archs
+    - -g everywhere
+    Many thanks to Adrian Bunk for that
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 13 Oct 2017 23:42:29 +0200
 
